# MS_01_Team_8_Project

./: CMakeLists.txt  Fine_Tuning_BERT_for_Spam_Classification.ipynb  FreeRTOSConfig.h  LD.c  LD.h  README.md  buzzer.c  buzzer.h  led.c  led.h  main.c  motor.c  motor.h  sound.c  sound.h  ultrasonic.c  ultrasonic.h
FreeRTOS-Kernel/examples/coverity/: FreeRTOSConfig.h
FreeRTOS-Kernel/include/: FreeRTOS.h
FreeRTOS-Kernel/portable/GCC/ARM_CM0/: portmacro.h
